--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@prismicio/client": "^5.1.0",
     "next": "11.1.2",
     "next-slicezone": "^0.1.2",
+    "prismic-javascript": "^3.0.2",
+    "prismic-reactjs": "^1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0"
