--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@prismicio/client": "^5.1.0",
+    "@types/react-modal": "^3.12.1",
     "next": "11.1.2",
     "next-slicezone": "^0.1.2",
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-modal": "^3.14.3"
   },
   "devDependencies": {
     "@types/react": "17.0.26",
