--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-modal": "^3.14.3"
+    "react-modal": "^3.14.3",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "17.0.26",
