--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prismicio/client": "^5.1.0",
     "@types/react-modal": "^3.12.1",
+    "formik": "^2.2.9",
     "next": "11.1.2",
     "next-slicezone": "^0.1.2",
     "prismic-javascript": "^3.0.2",
@@ -19,7 +20,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "react-toastify": "^8.0.3"
   },
   "devDependencies": {
     "@types/react": "17.0.26",
